Charset and mobile identifier added Spacing fixed

--- a/style.css
+++ b/style.css
@@ -131,6 +131,7 @@ span.nav {
   background-position: center;
   background-size: cover;
   background-repeat: no-repeat;
+  margin-bottom: 2rem;
 
 }
 
@@ -168,6 +169,7 @@ span.nav {
   display: flex;
   flex-direction: column;
   align-items: center;
+  margin-bottom: 3rem;
 }
 
 .flex-products {
@@ -241,6 +243,7 @@ span.nav {
   display: none;
 }
 
+/*First weird looking break  */
 @media only screen and (max-width: 1060px) {
   .locations {
     font-size: 16px;
@@ -269,7 +272,7 @@ span.nav {
     display: none;
   }
 }
-
+/*Website break point  */
 @media only screen and (max-width: 620px) {
   .locations {
     height: auto;
